# PPO-for-LibTorch-CXX

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.json  docker-compose.yml
src/: ActorCritic.cpp  ActorCritic.h  CartPoleEnv.cpp  GymEnv.cpp  GymEnv.h  PPOAgent.h  PPOAgent.tpp  main.cpp
src/config/: Config.h
src/core/: PPOAgent.cpp  PPOAgent.h  PPOAgent.tpp
src/environments/: CartPoleEnv.cpp  CartPoleEnv.h  GymEnv.cpp  GymEnv.h  StepResult.h
src/networks/: ActorCritic.cpp  ActorCritic.h
